[gd_scene load_steps=2 format=3 uid="uid://cp0obnu4x6pgv"]

[ext_resource type="Script" uid="uid://doo75rjpepqwb" path="res://scripts/windows/packet_capture_ui.gd" id="1_a6h5u"]

[node name="PacketCaptureUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a6h5u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxFilter" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxFilter"]
layout_mode = 2
text = "Filter:"

[node name="FilterLineEdit" type="LineEdit" parent="VBoxContainer/HBoxFilter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PacketListTextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
