# packet_capture_ui.gd
extends Control

@onready var filter_line_edit = $VBoxContainer/HBoxFilter/FilterLineEdit
@onready var packet_list_text_edit = $VBoxContainer/PacketListTextEdit

# ãƒ‘ã‚±ãƒƒãƒˆãƒ‡ãƒ¼ã‚¿ã®å…¨ä½“ (ãƒ•ã‚£ãƒ«ã‚¿ãƒªãƒ³ã‚°å‰ã®ã‚ªãƒªã‚¸ãƒŠãƒ«ãƒ‡ãƒ¼ã‚¿)
var original_packet_data: String = ""

# å¤–éƒ¨ã‹ã‚‰ãƒ•ã‚¡ã‚¤ãƒ«å†…å®¹ã‚’ãƒ­ãƒ¼ãƒ‰ã™ã‚‹ãŸã‚ã®é–¢æ•°
func load_pcap_data(pcap_content: String):
	# ğŸ’¡ VFSã‹ã‚‰ãƒ­ãƒ¼ãƒ‰ã•ã‚Œã‚‹ã®ã¯ã€æ—¢ã«ç”Ÿæˆã•ã‚ŒãŸã€Œpcapãƒ•ã‚¡ã‚¤ãƒ«ã®å†…å®¹ã€ã§ã™ã€‚
	original_packet_data = pcap_content
	packet_list_text_edit.text = original_packet_data
	
	# åˆå›æç”»æ™‚ã«ãƒ•ã‚£ãƒ«ã‚¿ãƒªãƒ³ã‚°ãƒ­ã‚¸ãƒƒã‚¯ã‚’é©ç”¨
	_on_filter_line_edit_text_changed(filter_line_edit.text)

# ãƒ•ã‚£ãƒ«ã‚¿ãƒªãƒ³ã‚°å‡¦ç†ã®å®Ÿè¡Œ
func _on_filter_line_edit_text_changed(new_text: String):
	var filter = new_text.strip_edges().to_lower()
	
	if filter.is_empty():
		# ãƒ•ã‚£ãƒ«ã‚¿ãŒç©ºã®å ´åˆã¯å…¨ä»¶è¡¨ç¤º
		packet_list_text_edit.text = original_packet_data
		return

	var lines = original_packet_data.split("\n", false)
	var filtered_lines = []
	
	# ç°¡æ˜“ãƒ•ã‚£ãƒ«ã‚¿ãƒªãƒ³ã‚°ãƒ­ã‚¸ãƒƒã‚¯: ãƒ•ã‚£ãƒ«ã‚¿æ–‡å­—åˆ—ã‚’å«ã‚€è¡Œã‚’æŠ½å‡º
	for line in lines:
		if line.to_lower().find(filter) != -1:
			filtered_lines.append(line)
			
	# çµæœã‚’TextEditã«è¡¨ç¤º (Godot 3.x å¯¾å¿œã® join)
	packet_list_text_edit.text = "\n".join(filtered_lines)
	
# ğŸ’¡ ãƒ‡ãƒãƒƒã‚°ç”¨: _ready() ã§ãƒ•ã‚£ãƒ«ã‚¿ãƒªãƒ³ã‚°ã‚·ã‚°ãƒŠãƒ«ã‚’æ¥ç¶š
func _ready():
	filter_line_edit.text_changed.connect(_on_filter_line_edit_text_changed)
